adds screenshots and more content to readme - how to run the app

--- a/README.html
+++ b/README.html
@@ -414,9 +414,23 @@ summary {
 </div>
 <div id="how-to-run-the-project" class="section level2">
 <h2>How to Run the Project</h2>
+<p>The dashboard is live and can be explored at <a href="https://dc27.shinyapps.io/uk_emissions_app/">shinyapps.io</a> .</p>
+<p>To run the project locally:</p>
+<ol style="list-style-type: decimal">
+<li>clone this repository</li>
+<li>open the R project file: <a href="uk_emissions_dashboard.Rproj">uk_emissions_dashboard.Rproj</a> in RStudio.</li>
+<li>Open either
+<ul>
+<li><a href="ui.R">ui.R</a></li>
+<li><a href="server.R">server.R</a></li>
+<li><a href="global.R">global.R</a></li>
+</ul></li>
+<li>Click “Run App” or enter the command: <code>shiny::runApp()</code></li>
+</ol>
 </div>
 <div id="packages-used" class="section level2">
 <h2>Packages Used</h2>
+<p>The cleaning script and dashboard elements were written in R using RStudio, making use of the following packages.</p>
 <table>
 <thead>
 <tr class="header">
